--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "aws-sdk": "^2.1360.0",
     "bull": "^4.10.4",
     "dotenv": "^16.0.3",
-    "fastify": "^4.17.0"
+    "fastify": "^4.26.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9"
   }
 }
